[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_hub"
version = "0.1.0"
authors = [
  {name = "Amey Desai", email = "amey.desai@nexla.com"},
  {name = "Saksham Mittal", email = "saksham.mittal@nexla.com"},
]
description = "Unified interface for major LLM providers with tracing, cost tracking, and more"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "google-genai>=1.10.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/nexla-opensource/llm_hub"
"Bug Tracker" = "https://github.com/nexla-opensource/llm_hub/issues" 